MacViews a11y: Sync VoiceOver cursor with keyboard focus.

Move the VoiceOver cursor when changing the keyboard focus if "VoiceOver cursor
follows keyboard focus" is turned on in VoiceOver Utility (System Preferences >
Accessibility > VoiceOver > Open VoiceOver Utility) with MacViews.

BUG=610585, 650118
TEST=With the #mac-views-native-dialogs flag turned on via chrome:flags, turn on
VoiceOver with Cmd+F5. Click the bookmark star on the right of the omnibox and
press tab to change focus inside it. The VoiceOver cursor should follow keyboard
focus.

Review-Url: https://codereview.chromium.org/2210763002
Cr-Commit-Position: refs/heads/master@{#423083}

Former-commit-id: f8686b58fdf56513efdf5ed2826018560d26bbe2